--- a/TrelloBootcamp.html
+++ b/TrelloBootcamp.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;1,300;1,400&display=swap" rel="stylesheet">
 	<link href="fontawesome-free-6.7.2-web/css/all.css" rel="stylesheet">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<main>
